--- a/views/services.hbs
+++ b/views/services.hbs
@@ -1,4 +1,4 @@
-
+{{>nav}}
 <link rel="stylesheet" href="/style/service.css">
 <section class="servicecont">
 
@@ -47,3 +47,5 @@
   </section>
 
 </section>
+
+{{>footer}}
