--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -1,6 +1,6 @@
+
+{{>nav}}
 <link rel="stylesheet" href="/style/tools.css">
-
-
   <div class="page-container">
     <h1 class="page-title">PDF Converter</h1>
     <p class="page-title">Convert your documents to high-quality PDF files.</p>
@@ -118,8 +118,9 @@
   </div>
 
 
- 
 
+ 
+{{> footer }}
 
 
  
@@ -132,3 +133,4 @@
     swal("Under Development", "This feature is under development", "warning");
   })
 </script>
+
