--- a/public/style/home.css
+++ b/public/style/home.css
@@ -1,7 +1,3 @@
-body {
-    margin: 0;
-    height: 100vh; /* Set the height of the body to 100% of the viewport height */
-}
 
 
 
@@ -11,6 +7,11 @@ body {
   font-family: "Poppins", sans-serif;
   font-style: normal;
 }
+
+body {
+  margin: 0;
+}
+
 
 .headline-one
 {
@@ -49,7 +50,6 @@ body {
 
 .container {
     width: 300px;
-    height: 340px;
     border-radius: 1em;
     overflow: hidden;
     box-shadow: 0 10px 20px #dbdbdb;
@@ -599,4 +599,48 @@ body {
   .save-icon i {
     font-size: 20px;
     cursor: pointer;
+  }
+
+
+  .video-container {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    position: relative;
+    width: 50%;
+  }
+  
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+ 
+  }
+  /* Hide default video controls */
+  .video-container video::-webkit-media-controls {
+    display: none !important;
+  }
+  
+  video
+  {
+    width: 80%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    object-fit: cover;
+  }
+
+  @media screen and (max-width: 600px) {
+    video
+    {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      object-fit: cover;
+    }
+    
   }
