--- a/public/style/nav.css
+++ b/public/style/nav.css
@@ -1,14 +1,10 @@
-/* Google Fonts Import Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 .nav-links{
   display: flex;
   align-items: center;
   background: #fff;
-  margin-right: 10px;
   height: 50px;
-  width: 100%;
-  margin-top: 0;
+  margin: 0;
 }
 .nav-links li{
   list-style: none;
