--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,10 +1,12 @@
+
+{{>nav}}
 <link rel="stylesheet" href="/style/about.css">
-<title> About Us  | GetReels </title>
+<title> About Us  | GetReels | Online Tools </title>
   <section class="about-us">
     <div class="about">
       <div class="text">
         <h2>About Us</h2>
-        <h5>GetReels <span> Instagram Video Downloader</span></h5>
+        <h5>GetReels <span> Online Tools </span></h5>
           <p>Welcome to our Instagram Reels Downloader! We're here to make your social media experience even better. Ever come across a fantastic Reel on Instagram and wished you could save it for later? That's where we come in. Our platform offers a straightforward solution to download your favorite Reels videos with just a click. No fuss, no hassle—just instant access to the content you love. Say hello to effortless downloading with our Instagram Reels Downloader!</p>
         <div class="data">
         <a href="https://www.linkedin.com/in/afsalmadathingal/" class="hire">Contact me </a>
@@ -12,5 +14,9 @@
       </div>
     </div>
 </section>
+
+{{>footer}}
+
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
