--- a/views/contactus.hbs
+++ b/views/contactus.hbs
@@ -1,5 +1,6 @@
+
+{{>nav}}
 <link rel="stylesheet" href="/style/about.css">
-</nav>
   <section class="about-us">
     <div class="about">
       <div class="text">
@@ -13,5 +14,9 @@
       </div>
     </div>
 </section>
+
+{{>footer}}
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+  
