--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,101 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/images/-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/images/-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/images/-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/imges/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-    <link rel="manifest" href="/images/manifest.json">
-    <meta name="google-adsense-account" content="ca-pub-9467128470827962">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="description"
-        content={{desc}}>
-    <meta name="keywords"
-        content={{keywords}}>
-          <title>{{title}}</title>
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
-    <link rel="stylesheet" href="/style/footer.css">
-    <link rel="stylesheet" href="/style/home.css">
-<link rel="stylesheet" href="/style/card.css">
-<link rel="stylesheet" href="/style/nav.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="57x57" href="/images/-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/images/-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/images/-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/images/-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/images/-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/imges/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+  <link rel="manifest" href="/images/manifest.json">
+  <meta name="google-adsense-account" content="ca-pub-9467128470827962">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="description" content={{desc}}>
+  <meta name="keywords" content={{keywords}}>
+  <title>{{title}}</title>
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 
-
-
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
-        crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"
+    integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-P4K089R1SG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-P4K089R1SG');
-</script>
+    gtag('config', 'G-P4K089R1SG');
+  </script>
 </head>
 
-
-
-
- 
 <body>
-<ul class="nav-links">
-    <li><a href="/">Home</a></li>
-     <li><a href="/policy">Policy</a></li>
-    <li class="center"><a href="/about">About</a></li>
-    <li class="upward"><a href="/services">Services</a></li>
-    <li class="forward"><a href="/contactus">Contact</a></li>
-</ul>
-
-    {{{body}}}
 
 
-<footer class="footer2">
-  <div class="footer-container">
- <ul class="social-icon">
-      <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/afsalshaofficial/">
-          <ion-icon name="logo-facebook"></ion-icon>
-        </a></li>
-      <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/emailafsalsha">
-          <ion-icon name="logo-twitter"></ion-icon>
-        </a></li>
-      <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/afsalmadathingal/">
-          <ion-icon name="logo-linkedin"></ion-icon>
-        </a></li>
-      <li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/afsal.madathingal/">
-          <ion-icon name="logo-instagram"></ion-icon>
-        </a></li>
-    </ul>
-    <ul class="menu">
-      <li class="menu__item"><a class="menu__link" href="/">Home</a></li>
-      <li class="menu__item"><a class="menu__link" href="/about">About</a></li>
-      <li class="menu__item"><a class="menu__link" href="/services">Services</a></li>
-      <li class="menu__item"><a class="menu__link" href="/contactus">Contact</a></li>
+  {{{body}}}
 
-    </ul>
-    <p>&copy;2024 Getreels | All Rights Reserved</p>
-  </div>
-   
-  </footer>
+
 
 </body>
+
 </html>
-<script src="/js/script.js"></script>
 <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -111,3 +73,17 @@
 </script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+}
+
+body
+{
+  margin: 0;
+}
+</style>
