--- a/views/privacypolicy.hbs
+++ b/views/privacypolicy.hbs
@@ -1,3 +1,5 @@
+{{>nav}}
+
 <link rel="stylesheet" href="/style/about.css">
 <section class="about-us">
     <div class="about">
@@ -62,5 +64,7 @@
     </div>
     </div>
 </section>
+
+{{>footer}}
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
