--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -3,7 +3,7 @@
   <div class="footer-container">
     <div class="footer-left">
       <h3 class="footer-title">Getreels</h3>
-      <p class="footer-desc">Unleash your creative potential with our cutting-edge video editing tools.</p>
+      <p class="footer-desc">Unleash your creative potential with our cutting-edge online tools.</p>
       <ul class="social-icons">
         <li><a href="https://www.facebook.com/afsalshaofficial/"><ion-icon name="logo-facebook"></ion-icon></a></li>
         <li><a href="https://twitter.com/emailafsalsha"><ion-icon name="logo-twitter"></ion-icon></a></li>
