--- a/views/imagetoPdf.hbs
+++ b/views/imagetoPdf.hbs
@@ -28,9 +28,8 @@
     </div>
   </form>
 
-    
+    <div class="loading-bar"></div>
 
-    <div class="loading-bar">Loading</div>
   </div>
 
   <div class="overlay" id="loading">
@@ -126,6 +125,14 @@
 
 .place-order-btn:hover {
   background-color: #45a049;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .modal-content {
+    width: 90%;
+    margin: 20% auto;
+  }
 }
 </style>
 
