--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,6 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/imges/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
   <link rel="manifest" href="/images/manifest.json">
-  <meta name="google-adsense-account" content="ca-pub-9467128470827962">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -26,7 +25,6 @@
   <meta name="keywords" content={{keywords}}>
   <title>{{title}}</title>
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -46,6 +44,8 @@
 
     gtag('config', 'G-P4K089R1SG');
   </script>
+
+  <script src="https://alwingulla.com/88/tag.min.js" data-zone="52021" async data-cfasync="false"></script>
 </head>
 
 <body>
