--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -2,6 +2,12 @@
 {{>nav}}
 <link rel="stylesheet" href="/style/tools.css">
   <div class="page-container">
+
+    <div class="ad-banner">
+        <img src="/images/New Project.webp" alt="Ad Banner">
+    </div>
+
+
     <h1 class="page-title">PDF Converter</h1>
     <p class="page-title">Convert your documents to high-quality PDF files.</p>
     <div class="card-container">
@@ -39,7 +45,11 @@
       </div>
     </div>
 
+  <div class="ad-banner">
+        <img src="/images/New Project.webp" alt="Ad Banner">
+    </div>
 
+    
  <div class="foobar-container">
     <div class="foobar-card">
       <h2 class="foobar-heading">Image to PDF Conversion FAQs</h2>
@@ -134,3 +144,21 @@
   })
 </script>
 
+
+<style>
+  .ad-banner {
+    max-width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ad-banner img {
+    width: 100%;
+    height: auto;
+}
+</style>
