--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -49,7 +49,7 @@
         <img src="/images/New Project.webp" alt="Ad Banner">
     </div>
 
-    
+
  <div class="foobar-container">
     <div class="foobar-card">
       <h2 class="foobar-heading">Image to PDF Conversion FAQs</h2>
@@ -142,6 +142,37 @@
   word.addEventListener('click', () => {
     swal("Under Development", "This feature is under development", "warning");
   })
+
+
+  let ads = document.querySelectorAll('.ad-banner');
+  if (ads) {
+    ads.forEach((el) => {
+      el.addEventListener('click', () => {
+        fetch('/adclick', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json;charset=utf-8'
+          },
+          body: JSON.stringify({})
+        })
+        .then((response) => {
+          if (response.ok) {
+            window.location.href = 'https://kukufm.page.link/g3LPeAENbog72tVX8';
+          } else {
+            console.error('Error clicking ad:', response);
+          }
+        })
+        .catch((error) => {
+          console.error('Error fetching ad click:', error);
+        });
+      });
+    });
+  }
+
+
+
+
+
 </script>
 
 
@@ -155,6 +186,8 @@
     width: 500px;
     margin-left: auto;
     margin-right: auto;
+     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .ad-banner img {
