--- a/views/imagetoPdf.hbs
+++ b/views/imagetoPdf.hbs
@@ -6,7 +6,14 @@
 
       <div class="ad-banner">
         <img src="/images/New Project.webp" alt="Ad Banner">
+        
     </div>
+
+    <div style="display: flex; align-items: center; justify-content: center;">
+      <iframe data-aa='2311712' src='//ad.a-ads.com/2311712?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+    </div>
+
+    
 
     <div class="headline-one">
       <h1>Image to PDF converter</h1>
@@ -32,10 +39,16 @@
       </div>
     </div>
   </form>
+  
+   <div style="display: flex; align-items: center; justify-content: center;">
+      <iframe data-aa='2311712' src='//ad.a-ads.com/2311712?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+    </div>
 
    <div class="ad-banner">
         <img src="/images/New Project.webp" alt="Ad Banner">
     </div>
+
+
 
     <div class="loading-bar"></div>
 
