--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -7,6 +7,9 @@
         <img src="/images/New Project.webp" alt="Ad Banner">
     </div>
 
+   <div style="display: flex; align-items: center; justify-content: center;">
+      <iframe data-aa='2311712' src='//ad.a-ads.com/2311712?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+    </div>
 
     <h1 class="page-title">PDF Converter</h1>
     <p class="page-title">Convert your documents to high-quality PDF files.</p>
@@ -43,6 +46,10 @@
           <a href="/tools/imagetoPdf" class="card-btn">Convert</a>
         </div>
       </div>
+    </div>
+
+   <div style="display: flex; align-items: center; justify-content: center;">
+      <iframe data-aa='2311712' src='//ad.a-ads.com/2311712?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
     </div>
 
   <div class="ad-banner">
