--- a/views/imagetoPdf.hbs
+++ b/views/imagetoPdf.hbs
@@ -39,7 +39,7 @@
       </div>
     </div>
   </form>
-  
+
    <div style="display: flex; align-items: center; justify-content: center;">
       <iframe data-aa='2311712' src='//ad.a-ads.com/2311712?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
     </div>
@@ -48,7 +48,9 @@
         <img src="/images/New Project.webp" alt="Ad Banner">
     </div>
 
-
+ <div style="display: flex; align-items: center; justify-content: center;">
+      <iframe data-aa='2311712' src='//ad.a-ads.com/2311712?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+    </div>
 
     <div class="loading-bar"></div>
 
