--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -27,7 +27,7 @@
 
       <div class="card card-design">
         <div class="card-image">
-          <img src="https://www.locklizard.com/wp-content/uploads/2023/07/convert-pdf-word.png" alt="Word to PDF">
+          <img src="https://www.locklizard.com/wp-content/uploads/2023/07/convert-pdf-word.png" alt="Word to PDF CONVERTER">
         </div>
         <div class="card-content">
           <h3 class="card-title">Word to PDF</h3>
@@ -38,7 +38,7 @@
 
       <div class="card card-design">
         <div class="card-image">
-          <img src="https://play-lh.googleusercontent.com/Cj9V8JveQEgT-jlyMPNTK1GPeeyHSEHpbWq5Y_1Hgdi0BsRbbpx3QzfrFv85eHy7JrI" alt="PNG to PDF">
+          <img src="https://play-lh.googleusercontent.com/Cj9V8JveQEgT-jlyMPNTK1GPeeyHSEHpbWq5Y_1Hgdi0BsRbbpx3QzfrFv85eHy7JrI" alt="PNG to PDF CONVERTER">
         </div>
         <div class="card-content">
           <h3 class="card-title">PNG to PDF</h3>
