--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,23 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="57x57" href="/images/-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/images/-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/images/-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/images/-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/images/-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/images/-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/images/-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/images/-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/images/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/imges/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-  <link rel="manifest" href="/images/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+ <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+<link rel="manifest" href="/icons/site.webmanifest">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
   <meta name="description" content={{desc}}>
   <meta name="keywords" content={{keywords}}>
   <title>{{title}}</title>
@@ -64,7 +54,7 @@
         "@type": "Organization",
         "name": "GetReels",
         "url": "https://getreels.cloud/",
-        "logo": "https://getreels.cloud/images/favicon.png",
+        "logo": "https://getreels.cloud/icons/favicon.png",
         "description": "GetReels is your one-stop destination for downloading Instagram videos quickly and easily. Simply paste the URL of the Instagram video and get instant access to download options.",
         "sameAs": [
         "https://www.linkedin.com/in/afsalmadathingal"
