--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,7 +44,7 @@
   {{{body}}}
 
 
-
+<script type="text/javascript"> var infolinks_pid = 3416702; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 
 </html>
