--- a/views/imagetoPdf.hbs
+++ b/views/imagetoPdf.hbs
@@ -5,7 +5,7 @@
   <div class="home">
 
       <div class="ad-banner">
-        <img src="/images/New Project.webp" alt="Ad Banner">
+        <img src="/images/upstox.webp" alt="Ad Banner">
         
     </div>
 
@@ -36,7 +36,7 @@
   </form>
 
    <div class="ad-banner">
-        <img src="/images/New Project.webp" alt="Ad Banner">
+        <img src="/images/upstox.webp" alt="Ad Banner">
     </div>
 
 
@@ -184,7 +184,7 @@
         })
         .then((response) => {
           if (response.ok) {
-            window.location.href = 'https://kukufm.page.link/g3LPeAENbog72tVX8';
+            window.location.href = 'https://link.upstox.com/rbQc';
           } else {
             console.error('Error clicking ad:', response);
           }
