--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -4,7 +4,7 @@
   <div class="page-container">
 
     <div class="ad-banner">
-        <img src="/images/New Project.webp" alt="Ad Banner">
+        <img src="/images/upstox.webp" alt="Ad Banner">
     </div>
 
  
@@ -48,7 +48,7 @@
 
 
   <div class="ad-banner">
-        <img src="/images/New Project.webp" alt="Ad Banner">
+        <img src="/images/upstox.webp" alt="Ad Banner">
     </div>
 
 
@@ -159,7 +159,7 @@
         })
         .then((response) => {
           if (response.ok) {
-            window.location.href = 'https://kukufm.page.link/g3LPeAENbog72tVX8';
+            window.location.href = 'https://link.upstox.com/rbQc';
           } else {
             console.error('Error clicking ad:', response);
           }
