--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,7 +1,19 @@
 <link rel="stylesheet" href="/style/nav.css">
-<ul class="nav-links">
+{{!-- <ul class="nav-links">
         <li><a href="/">Home</a></li>
          <li><a href="/api">Api</a></li>
         <li class="upward"><a href="/tools">PDF tools</a></li>
          <li class="center"><a href="/about">About</a></li>
-</ul>
+</ul> --}}
+
+  <header>
+    <nav>
+      <div class="logo">GetReels</div>
+      <div class="nav-links">
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/api">API</a>
+        <a href="/tools">PDF Tools</a>
+      </div>
+    </nav>
+  </header>
