--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -6,12 +6,12 @@
          <li class="center"><a href="/about">About</a></li>
 </ul> --}}
 
-  <header>
+  <header class="headerFornav">
     <nav>
       <div class="logo">GetReels</div>
       <div class="nav-links">
         <a href="/">Home</a>
-        <a href="/about">About</a>
+        <a href="/blog">Blog</a>
         <a href="/api">API</a>
         <a href="/tools">PDF Tools</a>
       </div>
