--- a/public/style/nav.css
+++ b/public/style/nav.css
@@ -69,7 +69,7 @@
   }
 }
  */
- header {
+ .headerFornav {
   
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -97,6 +97,13 @@
   position: relative;
   padding-bottom: 5px;
   transition: color 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-links a {
+    font-size: 15px;
+  }
+  
 }
 
 .nav-links a::after {
