--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -62,7 +62,7 @@
 
 </main>
 {{>footer}}
-<link rel="stylesheet" href="/style/blogview.css">
+<link rel="stylesheet" href="/style/blogView.css">
 
 <script>
     const commentpost= document.getElementById("submit-btn-comment");
