--- a/views/contactus.hbs
+++ b/views/contactus.hbs
@@ -5,7 +5,7 @@
     <div class="about">
       <div class="text">
         <h1>Contact Us</h1>
-         <p>If you have any questions, suggestions or need assistance with our online tools, please feel free to contact us using the information below. We'll be happy to help!</p> <h5>Email</h5> <p>The best way to reach us is via email at:</p> <p><a href="mailto:contact.iluvnet@gmail.com">contact.iluvnet@gmail.com</a></p> 
+         <p>If you have any questions, suggestions or need assistance with our online tools, please feel free to contact us using the information below. We'll be happy to help!</p> <h5>Email</h5> <p>The best way to reach us is via email at:</p> <p><a href="mailto:contact.ilovenet@gmail.com">contact.ilovenet@gmail.com</a></p> 
          <h5>Mailing Address</h5> <p>iluvnet.com<br> malappuram <br> kerala/ponnani 679583<br> India</p> <p>We strive to respond to all inquiries within 1-2 business days.</p> <p>For technical support with our tools, frequently asked questions, or information about our policies, please check our <a href="/faq">FAQ</a> first.</p>
       </div>
     </div>
