--- a/views/blogtwo.hbs
+++ b/views/blogtwo.hbs
@@ -37,7 +37,7 @@
         class="transition-colors duration-300 hover:bg-gray-100 border border-black border-opacity-0 hover:border-opacity-5 rounded-xl">
         <div data-id="{{blogData.0._id}}" class="py-6 px-5 lg:flex blog">
             <div class="flex-1 lg:mr-8">
-                <img src="{{blogData.0.image}}" alt="Blog Post illustration" class="rounded-xl">
+                <img src="{{blogData.0.image}}" alt="{{blogData.0.title}}" class="rounded-xl">
             </div>
 
             <div class="flex-1 flex flex-col justify-between">
@@ -92,7 +92,7 @@
             class="transition-colors duration-300 hover:bg-gray-100 border border-black border-opacity-0 hover:border-opacity-5 rounded-xl">
             <div data-id="{{blogData.1._id}}" class="py-6 px-5 blog">
                 <div>
-                    <img src="{{blogData.1.image}}" alt="Blog Post illustration" class="rounded-xl">
+                    <img src="{{blogData.1.image}}" alt="{{blogData.1.title}}" class="rounded-xl">
                 </div>
 
                 <div class="mt-8 flex flex-col justify-between">
@@ -148,7 +148,7 @@
             class="transition-colors duration-300 hover:bg-gray-100 border border-black border-opacity-0 hover:border-opacity-5 rounded-xl">
             <div  data-id="{{blogData.2._id}}" class="py-6 px-5 blog">
                 <div>
-                    <img src="{{blogData.2.image}}" alt="Blog Post illustration" class="rounded-xl">
+                    <img src="{{blogData.2.image}}" alt="{{blogData.2.title}}" class="rounded-xl">
                 </div>
 
                 <div class="mt-8 flex flex-col justify-between">
@@ -208,7 +208,7 @@
             class="transition-colors duration-300 hover:bg-gray-100 border border-black border-opacity-0 hover:border-opacity-5 rounded-xl">
             <div  data-id="{{this._id}}" class="py-6 px-5 blog">
                 <div>
-                    <img src="{{this.image}}" alt="Blog Post illustration" class="rounded-xl">
+                    <img src="{{this.image}}" alt="{{this.title}}" class="rounded-xl">
                 </div>
 
                 <div class="mt-8 flex flex-col justify-between">
@@ -242,7 +242,7 @@
 
                     <footer class="flex justify-between items-center mt-8">
                         <div class="flex items-center text-sm">
-                            <img src="/icons/android-icon-48x48.png" alt="Lary avatar">
+                            <img src="/icons/android-icon-48x48.png" alt="avatar">
                             <div class="ml-3">
                                 <h5 class="font-bold">Iluvnet.com</h5>
                                 <h6>Written By Iluvnet</h6>
