--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -32,7 +32,7 @@
                     <img src="{{this.image}}" alt="{{this.title}}">
                     <h4>{{this.title}}</h4>
                     <p>{{this.shortDescription}}</p>
-                    <a href="/blogview/{{this.id}}">Read More</a>
+                    <a href="/blogview/{{changeSpacesToDash this.title}}">Read More</a>
                 </div>
                 {{/each}}
             </div>
