--- a/views/blogtwo.hbs
+++ b/views/blogtwo.hbs
@@ -35,7 +35,7 @@
 <main class="max-w-6xl mx-auto mt-6 lg:mt-20 space-y-6">
     <article
         class="transition-colors duration-300 hover:bg-gray-100 border border-black border-opacity-0 hover:border-opacity-5 rounded-xl">
-        <div data-id="{{blogData.0._id}}" class="py-6 px-5 lg:flex blog">
+        <div data-id="{{blogData.0.title}}" class="py-6 px-5 lg:flex blog">
             <div class="flex-1 lg:mr-8">
                 <img src="{{blogData.0.image}}" alt="{{blogData.0.title}}" class="rounded-xl">
             </div>
@@ -78,7 +78,7 @@
                     </div>
 
                     <div class="hidden lg:block">
-                        <a href="/blogview/{{blogData.0.id}}"
+                        <a href="/blogview/{{changeSpacesToDash blogData.0.title}}"
                             class="transition-colors duration-300 text-xs font-semibold bg-gray-200 hover:bg-gray-300 rounded-full py-2 px-8">Read
                             More</a>
                     </div>
@@ -90,7 +90,7 @@
     <div class="lg:grid lg:grid-cols-2">
         <article
             class="transition-colors duration-300 hover:bg-gray-100 border border-black border-opacity-0 hover:border-opacity-5 rounded-xl">
-            <div data-id="{{blogData.1._id}}" class="py-6 px-5 blog">
+            <div data-id="{{blogData.1.title}}" class="py-6 px-5 blog">
                 <div>
                     <img src="{{blogData.1.image}}" alt="{{blogData.1.title}}" class="rounded-xl">
                 </div>
@@ -134,7 +134,7 @@
                         </div>
 
                         <div>
-                            <a href="/blogview/{{blogData.1.id}}"
+                            <a href="/blogview/{{changeSpacesToDash blogData.1.title}}"
                                 class="transition-colors duration-300 text-xs font-semibold bg-gray-200 hover:bg-gray-300 rounded-full py-2 px-8">
                                 Read More
                             </a>
@@ -146,7 +146,7 @@
 
         <article
             class="transition-colors duration-300 hover:bg-gray-100 border border-black border-opacity-0 hover:border-opacity-5 rounded-xl">
-            <div  data-id="{{blogData.2._id}}" class="py-6 px-5 blog">
+            <div  data-id="{{blogData.2.title}}" class="py-6 px-5 blog">
                 <div>
                     <img src="{{blogData.2.image}}" alt="{{blogData.2.title}}" class="rounded-xl">
                 </div>
@@ -191,7 +191,7 @@
                         </div>
 
                         <div>
-                            <a href="/blogview/{{blogData.2.id}}"
+                            <a href="/blogview/{{changeSpacesToDash blogData.2.title}}"
                                 class="transition-colors duration-300 text-xs font-semibold bg-gray-200 hover:bg-gray-300 rounded-full py-2 px-8">
                                 Read More
                             </a>
@@ -206,7 +206,7 @@
         {{#each blogData}}
         <article
             class="transition-colors duration-300 hover:bg-gray-100 border border-black border-opacity-0 hover:border-opacity-5 rounded-xl">
-            <div  data-id="{{this._id}}" class="py-6 px-5 blog">
+            <div  data-id="{{this.title}}" class="py-6 px-5 blog">
                 <div>
                     <img src="{{this.image}}" alt="{{this.title}}" class="rounded-xl">
                 </div>
@@ -250,7 +250,7 @@
                         </div>
 
                         <div>
-                            <a href="/blogview/{{this.id}}"
+                            <a href="/blogview/{{changeSpacesToDash this.title}}"
                                 class="transition-colors duration-300 text-xs font-semibold bg-gray-200 hover:bg-gray-300 rounded-full py-2 px-8">Read
                                 More</a>
                         </div>
@@ -275,7 +275,9 @@
     blog.forEach((blog) => {
         blog.addEventListener('click', () => {
             const id = blog.getAttribute('data-id')
-            window.location.href = `/blogview/${id}`
+            let query = id.replace(/-/g, '@') // replace dash with @
+            changed = query.replace(/ /g, '-')
+            window.location.href = `/blogview/${changed}`
         })
     })
 </script>
