--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -6,7 +6,8 @@
                 <h1>{{blog.title}}</h1>
                 <div class="post-meta">
                     <span class="author">By ILuvnet.com</span>
-                    <span class="date">{{formatDate blog.date}}</span>
+                    <span class="author"><i class="fa-solid fa-eye"></i> {{blog.views}}</span>
+                    <span class="date"><i class="fa-solid fa-clock"></i> {{formatDate blog.date}}</span>
                     <div class="tags">
                         {{#each blog.tags}}
                         <span class="tag">{{this}}</span>
