--- a/views/newhome.hbs
+++ b/views/newhome.hbs
@@ -55,7 +55,7 @@
         <div class="container">
           {{#each blogData}}
           
-            <div data-id="{{this._id}}" class="blog">
+            <div data-id="{{this.title}}" class="blog">
               <div class="blog__header">
                 <img src="{{this.image}}" alt="blog__image" class="blog__image" width="600">
               </div>
@@ -426,7 +426,8 @@ section
   blog.forEach((blog) => {
     blog.addEventListener('click', () => {
       const id = blog.getAttribute('data-id')
-      window.location.href = `/blogview/${id}`
+       let query = id.replace(/-/g, '@').replace(/\?/g, 'qmark').replace(/ /g, '-')
+      window.location.href = `/blogview/${query}`
     })
   })
 
