--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -42,6 +42,7 @@
     integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script async src="https://fundingchoicesmessages.google.com/i/pub-7820803685387750?ers=1" nonce="ZVG4vGoditoPyXbN-p3E8A"></script><script nonce="ZVG4vGoditoPyXbN-p3E8A">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
+<meta name="msvalidate.01" content="4A55E8CB21951DADE3CABA41578D5ED2" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-37JXSQCELV"></script>
 <script>
