--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -92,5 +92,9 @@
 
   body {
     margin: 0;
+      -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none;
   }
 </style>
