--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -29,6 +29,7 @@
           <li><a href="/FAQ">FAQ</a></li>
           <li><a href="/policy">Policy</a></li>
           <li><a href="/terms-of-service">Terms of Service</a></li>
+          <li><a href="/sitemap">Sitemap</a></li>
         </ul>
       </div>
     </div>
