--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,9 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-
+  {{#if thumbnail}}
+ <meta property="og:image" content="{{thumbnail}}" />
+ {{/if}}
   <meta name="description" content={{desc}}>
   <meta name="keywords" content={{keywords}}>
   <title>{{title}}</title>
