--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,8 +28,8 @@
  {{#if canonical}}
  <link rel="canonical" href="{{canonical}}">
  {{/if}}
-  <meta name="description" content={{desc}}>
-  <meta name="keywords" content={{keywords}}>
+  <meta name="description" content="{{he desc}}">
+  <meta name="keywords" content="{{keywords}}">
   <title>{{title}}</title>
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
