--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,7 +28,9 @@
  {{#if canonical}}
  <link rel="canonical" href="{{canonical}}">
  {{/if}}
+ {{#if desc}}
   <meta name="description" content="{{he desc}}">
+  {{/if}}
   <meta name="keywords" content="{{keywords}}">
   <title>{{title}}</title>
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
